# sl_platform

./: .gitignore  CMakeLists.txt  README.md  platform_define.h
cmake/: sl_helpers.cmake
cmsis_rtos2/: CMakeLists.txt
posix/: CMakeLists.txt
windows/: CMakeLists.txt
